--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,7 +3,29 @@ entries:
   discovery:
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-03-27T20:41:40.459786-04:00"
+    created: "2024-03-28T06:09:27.674973-04:00"
+    dependencies:
+    - name: db
+      repository: ""
+      version: 1.0.1
+    - name: redis
+      repository: ""
+      version: 1.0.0
+    - name: celery-worker
+      repository: ""
+      version: 0.9.3
+    description: The RedHat Product Discovery tool is designed to help users collect
+      data about their usage of specific Red Hat software.
+    digest: 09a8228e477742c0ab5231ebe8c6d44c30ca5afaa23d45112c79405a02a40083
+    icon: https://quipucords.github.io/discovery-helm-repo/charts/discovery/icon.png
+    name: discovery
+    type: application
+    urls:
+    - discovery-0.9.3.tgz
+    version: 0.9.3
+  - apiVersion: v2
+    appVersion: 1.5.3
+    created: "2024-03-28T06:09:27.674035-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -23,4 +45,4 @@ entries:
     urls:
     - discovery-0.9.2.tgz
     version: 0.9.2
-generated: "2024-03-27T20:41:40.456106-04:00"
+generated: "2024-03-28T06:09:27.672273-04:00"
