--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,7 +3,29 @@ entries:
   discovery:
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-03-29T05:20:56.834864-04:00"
+    created: "2024-03-29T14:54:27.064203-04:00"
+    dependencies:
+    - name: db
+      repository: ""
+      version: 1.0.2
+    - name: redis
+      repository: ""
+      version: 1.0.0
+    - name: celery-worker
+      repository: ""
+      version: 0.9.5
+    description: The RedHat Product Discovery tool is designed to help users collect
+      data about their usage of specific Red Hat software.
+    digest: 647e8eb9e01b27f4f5972421207c10ebaf94932062a6480d04c3d5b14131a43a
+    icon: https://quipucords.github.io/discovery-helm-repo/charts/discovery/icon.png
+    name: discovery
+    type: application
+    urls:
+    - discovery-0.9.5.tgz
+    version: 0.9.5
+  - apiVersion: v2
+    appVersion: 1.5.3
+    created: "2024-03-29T14:54:27.063169-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -25,7 +47,7 @@ entries:
     version: 0.9.4
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-03-29T05:20:56.832015-04:00"
+    created: "2024-03-29T14:54:27.060711-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -47,7 +69,7 @@ entries:
     version: 0.9.3
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-03-29T05:20:56.830624-04:00"
+    created: "2024-03-29T14:54:27.059342-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -67,4 +89,4 @@ entries:
     urls:
     - discovery-0.9.2.tgz
     version: 0.9.2
-generated: "2024-03-29T05:20:56.829041-04:00"
+generated: "2024-03-29T14:54:27.057008-04:00"
