chore: Updating to 0.9.6 to expose maxReplicas
- Also, updated maxReplicas default to be 1 as
  we're not enabling celery based manager yet.

--- a/overlays/values.yaml
+++ b/overlays/values.yaml
@@ -20,6 +20,7 @@ celery-worker:
     pullPolicy: IfNotPresent
   autoscaling:
     minReplicas: 1
+    maxReplicas: 1
 
 global:
   enableCeleryScanManager: "0"
