--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,8 +2,30 @@ apiVersion: v1
 entries:
   discovery:
   - apiVersion: v2
+    appVersion: 1.6.1
+    created: "2024-04-02T03:05:54.414408-04:00"
+    dependencies:
+    - name: db
+      repository: ""
+      version: 1.0.2
+    - name: redis
+      repository: ""
+      version: 1.0.0
+    - name: celery-worker
+      repository: ""
+      version: 0.9.6
+    description: The RedHat Product Discovery tool is designed to help users collect
+      data about their usage of specific Red Hat software.
+    digest: b94641656bae86c99782b97ba579faaa5ca1a3495ecb860e8160f408d7e0a7ec
+    icon: https://quipucords.github.io/discovery-helm-repo/charts/discovery/icon.png
+    name: discovery
+    type: application
+    urls:
+    - discovery-0.9.6.tgz
+    version: 0.9.6
+  - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-03-29T14:54:27.064203-04:00"
+    created: "2024-04-02T03:05:54.412236-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -25,7 +47,7 @@ entries:
     version: 0.9.5
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-03-29T14:54:27.063169-04:00"
+    created: "2024-04-02T03:05:54.410972-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -47,7 +69,7 @@ entries:
     version: 0.9.4
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-03-29T14:54:27.060711-04:00"
+    created: "2024-04-02T03:05:54.409801-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -69,7 +91,7 @@ entries:
     version: 0.9.3
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-03-29T14:54:27.059342-04:00"
+    created: "2024-04-02T03:05:54.408549-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -89,4 +111,4 @@ entries:
     urls:
     - discovery-0.9.2.tgz
     version: 0.9.2
-generated: "2024-03-29T14:54:27.057008-04:00"
+generated: "2024-04-02T03:05:54.406527-04:00"
