--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,8 +2,30 @@ apiVersion: v1
 entries:
   discovery:
   - apiVersion: v2
+    appVersion: 1.7.0
+    created: "2024-05-10T16:37:04.364352-04:00"
+    dependencies:
+    - name: db
+      repository: ""
+      version: 1.0.2
+    - name: redis
+      repository: ""
+      version: 1.0.0
+    - name: celery-worker
+      repository: ""
+      version: 0.9.8
+    description: The RedHat Product Discovery tool is designed to help users collect
+      data about their usage of specific Red Hat software.
+    digest: ce506f8f67e2e886014bde7af29ff15c279bc4d3605db16b7d66aea80abb8564
+    icon: https://quipucords.github.io/discovery-helm-repo/charts/discovery/icon.png
+    name: discovery
+    type: application
+    urls:
+    - discovery-0.9.8.tgz
+    version: 0.9.8
+  - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-04-02T03:24:33.41994-04:00"
+    created: "2024-05-10T16:37:04.363444-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -25,7 +47,7 @@ entries:
     version: 0.9.6
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-04-02T03:24:33.419023-04:00"
+    created: "2024-05-10T16:37:04.362228-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -47,7 +69,7 @@ entries:
     version: 0.9.5
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-04-02T03:24:33.417727-04:00"
+    created: "2024-05-10T16:37:04.361065-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -69,7 +91,7 @@ entries:
     version: 0.9.4
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-04-02T03:24:33.415575-04:00"
+    created: "2024-05-10T16:37:04.359887-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -91,7 +113,7 @@ entries:
     version: 0.9.3
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-04-02T03:24:33.414241-04:00"
+    created: "2024-05-10T16:37:04.358597-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -111,4 +133,4 @@ entries:
     urls:
     - discovery-0.9.2.tgz
     version: 0.9.2
-generated: "2024-04-02T03:24:33.412253-04:00"
+generated: "2024-05-10T16:37:04.35704-04:00"
