--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -3,7 +3,29 @@ entries:
   discovery:
   - apiVersion: v2
     appVersion: 1.7.0
-    created: "2024-05-10T16:37:04.364352-04:00"
+    created: "2024-05-14T10:42:14.126075-04:00"
+    dependencies:
+    - name: db
+      repository: ""
+      version: 1.0.2
+    - name: redis
+      repository: ""
+      version: 1.0.0
+    - name: celery-worker
+      repository: ""
+      version: 0.9.9
+    description: The RedHat Product Discovery tool is designed to help users collect
+      data about their usage of specific Red Hat software.
+    digest: 7d9e01d385e689556f9326b5701c5d84ee43c135cd2145da5a677f13c19641f8
+    icon: https://quipucords.github.io/discovery-helm-repo/charts/discovery/icon.png
+    name: discovery
+    type: application
+    urls:
+    - discovery-0.9.9.tgz
+    version: 0.9.9
+  - apiVersion: v2
+    appVersion: 1.7.0
+    created: "2024-05-14T10:42:14.123697-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -25,7 +47,7 @@ entries:
     version: 0.9.8
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-05-10T16:37:04.363444-04:00"
+    created: "2024-05-14T10:42:14.122268-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -47,7 +69,7 @@ entries:
     version: 0.9.6
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-05-10T16:37:04.362228-04:00"
+    created: "2024-05-14T10:42:14.120952-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -69,7 +91,7 @@ entries:
     version: 0.9.5
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-05-10T16:37:04.361065-04:00"
+    created: "2024-05-14T10:42:14.119772-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -91,7 +113,7 @@ entries:
     version: 0.9.4
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-05-10T16:37:04.359887-04:00"
+    created: "2024-05-14T10:42:14.118304-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -113,7 +135,7 @@ entries:
     version: 0.9.3
   - apiVersion: v2
     appVersion: 1.5.3
-    created: "2024-05-10T16:37:04.358597-04:00"
+    created: "2024-05-14T10:42:14.116731-04:00"
     dependencies:
     - name: db
       repository: ""
@@ -133,4 +155,4 @@ entries:
     urls:
     - discovery-0.9.2.tgz
     version: 0.9.2
-generated: "2024-05-10T16:37:04.35704-04:00"
+generated: "2024-05-14T10:42:14.115065-04:00"
